Refactor ArticleUtils for improved readability and performance; enhance OrderExport to handle empty orders; add new Unicode symbols; update categories.json for correct article number ranges.